--- a/codec_test/Makefile
+++ b/codec_test/Makefile
@@ -15,7 +15,7 @@ CXX           = /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefau
 DEFINES       = -DQT_NO_DEBUG -DQT_WIDGETS_LIB -DQT_MULTIMEDIA_LIB -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB
 CFLAGS        = -pipe -O2 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.7 -Wall -W -fPIC $(DEFINES)
 CXXFLAGS      = -pipe -stdlib=libc++ -O2 -std=gnu++11 -isysroot /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.7 -Wall -W -fPIC $(DEFINES)
-INCPATH       = -I. -I. -I../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers -I../../../../Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers -I../../../../Qt/5.6/clang_64/lib/QtGui.framework/Headers -I../../../../Qt/5.6/clang_64/lib/QtNetwork.framework/Headers -I../../../../Qt/5.6/clang_64/lib/QtCore.framework/Headers -I. -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/System/Library/Frameworks/OpenGL.framework/Headers -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/System/Library/Frameworks/AGL.framework/Headers -I../../../../Qt/5.6/clang_64/mkspecs/macx-clang -F/Users/kenji/Qt/5.6/clang_64/lib
+INCPATH       = -I. -I. -I/usr/local/include -I../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers -I../../../../Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers -I../../../../Qt/5.6/clang_64/lib/QtGui.framework/Headers -I../../../../Qt/5.6/clang_64/lib/QtNetwork.framework/Headers -I../../../../Qt/5.6/clang_64/lib/QtCore.framework/Headers -I. -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/System/Library/Frameworks/OpenGL.framework/Headers -I/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/System/Library/Frameworks/AGL.framework/Headers -I../../../../Qt/5.6/clang_64/mkspecs/macx-clang -F/Users/kenji/Qt/5.6/clang_64/lib
 QMAKE         = /Users/kenji/Qt/5.6/clang_64/bin/qmake
 DEL_FILE      = rm -f
 CHK_DIR_EXISTS= test -d
@@ -36,7 +36,7 @@ DISTNAME      = codec_test1.0.0
 DISTDIR = /Users/kenji/src/github/dsp/codec_test/.tmp/codec_test1.0.0
 LINK          = /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/clang++
 LFLAGS        = -headerpad_max_install_names -stdlib=libc++ -Wl,-syslibroot,/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk -mmacosx-version-min=10.7 -Wl,-rpath,/Users/kenji/Qt/5.6/clang_64/lib
-LIBS          = $(SUBLIBS) -F/Users/kenji/Qt/5.6/clang_64/lib -framework QtWidgets -framework QtMultimedia -framework QtGui -framework QtNetwork -framework QtCore -framework OpenGL -framework AGL 
+LIBS          = $(SUBLIBS) -L/usr/local/lib -F/Users/kenji/Qt/5.6/clang_64/lib -lspeex -framework QtWidgets -framework QtMultimedia -framework QtGui -framework QtNetwork -framework QtCore -framework OpenGL -framework AGL 
 AR            = /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/ar cq
 RANLIB        = /Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/bin/ranlib -s
 SED           = sed
@@ -52,17 +52,27 @@ SOURCES       = Hello.cpp \
 		Player.cpp \
 		AudioSource.cpp \
 		SourceChooser.cpp \
-		SpeexOptionSetting.cpp moc_Player.cpp \
+		SpeexOptionSetting.cpp \
+		SpeexCodec.cpp \
+		NullCodec.cpp \
+		CodecWrapper.cpp \
+		CodecChooser.cpp moc_Player.cpp \
 		moc_SourceChooser.cpp \
-		moc_SpeexOptionSetting.cpp
+		moc_SpeexOptionSetting.cpp \
+		moc_CodecChooser.cpp
 OBJECTS       = Hello.o \
 		Player.o \
 		AudioSource.o \
 		SourceChooser.o \
 		SpeexOptionSetting.o \
+		SpeexCodec.o \
+		NullCodec.o \
+		CodecWrapper.o \
+		CodecChooser.o \
 		moc_Player.o \
 		moc_SourceChooser.o \
-		moc_SpeexOptionSetting.o
+		moc_SpeexOptionSetting.o \
+		moc_CodecChooser.o
 DIST          = ../../../../Qt/5.6/clang_64/mkspecs/features/spec_pre.prf \
 		../../../../Qt/5.6/clang_64/mkspecs/qdevice.pri \
 		../../../../Qt/5.6/clang_64/mkspecs/features/device_config.prf \
@@ -206,11 +216,18 @@ DIST          = ../../../../Qt/5.6/clang_64/mkspecs/features/spec_pre.prf \
 		codec_test.pro Player.hxx \
 		AudioSource.hxx \
 		SourceChooser.hxx \
-		SpeexOptionSetting.hxx Hello.cpp \
+		SpeexOptionSetting.hxx \
+		NullCodec.hxx \
+		CodecWrapper.hxx \
+		CodecChooser.hxx Hello.cpp \
 		Player.cpp \
 		AudioSource.cpp \
 		SourceChooser.cpp \
-		SpeexOptionSetting.cpp
+		SpeexOptionSetting.cpp \
+		SpeexCodec.cpp \
+		NullCodec.cpp \
+		CodecWrapper.cpp \
+		CodecChooser.cpp
 QMAKE_TARGET  = codec_test
 DESTDIR       = 
 TARGET        = codec_test.app/Contents/MacOS/codec_test
@@ -545,8 +562,8 @@ dist: distdir FORCE
 distdir: FORCE
 	@test -d $(DISTDIR) || mkdir -p $(DISTDIR)
 	$(COPY_FILE) --parents $(DIST) $(DISTDIR)/
-	$(COPY_FILE) --parents Player.hxx AudioSource.hxx SourceChooser.hxx SpeexOptionSetting.hxx $(DISTDIR)/
-	$(COPY_FILE) --parents Hello.cpp Player.cpp AudioSource.cpp SourceChooser.cpp SpeexOptionSetting.cpp $(DISTDIR)/
+	$(COPY_FILE) --parents Player.hxx AudioSource.hxx SourceChooser.hxx SpeexOptionSetting.hxx NullCodec.hxx CodecWrapper.hxx CodecChooser.hxx $(DISTDIR)/
+	$(COPY_FILE) --parents Hello.cpp Player.cpp AudioSource.cpp SourceChooser.cpp SpeexOptionSetting.cpp SpeexCodec.cpp NullCodec.cpp CodecWrapper.cpp CodecChooser.cpp $(DISTDIR)/
 
 
 clean: compiler_clean 
@@ -570,9 +587,9 @@ check: first
 
 compiler_rcc_make_all:
 compiler_rcc_clean:
-compiler_moc_header_make_all: moc_Player.cpp moc_SourceChooser.cpp moc_SpeexOptionSetting.cpp
+compiler_moc_header_make_all: moc_Player.cpp moc_SourceChooser.cpp moc_SpeexOptionSetting.cpp moc_CodecChooser.cpp
 compiler_moc_header_clean:
-	-$(DEL_FILE) moc_Player.cpp moc_SourceChooser.cpp moc_SpeexOptionSetting.cpp
+	-$(DEL_FILE) moc_Player.cpp moc_SourceChooser.cpp moc_SpeexOptionSetting.cpp moc_CodecChooser.cpp
 moc_Player.cpp: ../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QWidget \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qwidget.h \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QBoxLayout \
@@ -584,7 +601,7 @@ moc_Player.cpp: ../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QWid
 		../../../../Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers/QAudioOutput \
 		../../../../Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers/qaudiooutput.h \
 		Player.hxx
-	/Users/kenji/Qt/5.6/clang_64/bin/moc $(DEFINES) -D__APPLE__ -D__GNUC__=4 -D__APPLE_CC__ -I/Users/kenji/Qt/5.6/clang_64/mkspecs/macx-clang -I/Users/kenji/src/github/dsp/codec_test -I/Users/kenji/src/github/dsp/codec_test -I/Users/kenji/Qt/5.6/clang_64/lib/QtWidgets.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtGui.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtNetwork.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtCore.framework/Headers -F/Users/kenji/Qt/5.6/clang_64/lib Player.hxx -o moc_Player.cpp
+	/Users/kenji/Qt/5.6/clang_64/bin/moc $(DEFINES) -D__APPLE__ -D__GNUC__=4 -D__APPLE_CC__ -I/Users/kenji/Qt/5.6/clang_64/mkspecs/macx-clang -I/Users/kenji/src/github/dsp/codec_test -I/Users/kenji/src/github/dsp/codec_test -I/usr/local/include -I/Users/kenji/Qt/5.6/clang_64/lib/QtWidgets.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtGui.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtNetwork.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtCore.framework/Headers -F/Users/kenji/Qt/5.6/clang_64/lib Player.hxx -o moc_Player.cpp
 
 moc_SourceChooser.cpp: ../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QWidget \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qwidget.h \
@@ -594,15 +611,25 @@ moc_SourceChooser.cpp: ../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Heade
 		../../../../Qt/5.6/clang_64/lib/QtCore.framework/Headers/qiodevice.h \
 		../../../../Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers/QAudioFormat \
 		../../../../Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers/qaudioformat.h \
+		Codec.hxx \
 		SourceChooser.hxx
-	/Users/kenji/Qt/5.6/clang_64/bin/moc $(DEFINES) -D__APPLE__ -D__GNUC__=4 -D__APPLE_CC__ -I/Users/kenji/Qt/5.6/clang_64/mkspecs/macx-clang -I/Users/kenji/src/github/dsp/codec_test -I/Users/kenji/src/github/dsp/codec_test -I/Users/kenji/Qt/5.6/clang_64/lib/QtWidgets.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtGui.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtNetwork.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtCore.framework/Headers -F/Users/kenji/Qt/5.6/clang_64/lib SourceChooser.hxx -o moc_SourceChooser.cpp
+	/Users/kenji/Qt/5.6/clang_64/bin/moc $(DEFINES) -D__APPLE__ -D__GNUC__=4 -D__APPLE_CC__ -I/Users/kenji/Qt/5.6/clang_64/mkspecs/macx-clang -I/Users/kenji/src/github/dsp/codec_test -I/Users/kenji/src/github/dsp/codec_test -I/usr/local/include -I/Users/kenji/Qt/5.6/clang_64/lib/QtWidgets.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtGui.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtNetwork.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtCore.framework/Headers -F/Users/kenji/Qt/5.6/clang_64/lib SourceChooser.hxx -o moc_SourceChooser.cpp
 
 moc_SpeexOptionSetting.cpp: ../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QWidget \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qwidget.h \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QLayout \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qlayout.h \
 		SpeexOptionSetting.hxx
-	/Users/kenji/Qt/5.6/clang_64/bin/moc $(DEFINES) -D__APPLE__ -D__GNUC__=4 -D__APPLE_CC__ -I/Users/kenji/Qt/5.6/clang_64/mkspecs/macx-clang -I/Users/kenji/src/github/dsp/codec_test -I/Users/kenji/src/github/dsp/codec_test -I/Users/kenji/Qt/5.6/clang_64/lib/QtWidgets.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtGui.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtNetwork.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtCore.framework/Headers -F/Users/kenji/Qt/5.6/clang_64/lib SpeexOptionSetting.hxx -o moc_SpeexOptionSetting.cpp
+	/Users/kenji/Qt/5.6/clang_64/bin/moc $(DEFINES) -D__APPLE__ -D__GNUC__=4 -D__APPLE_CC__ -I/Users/kenji/Qt/5.6/clang_64/mkspecs/macx-clang -I/Users/kenji/src/github/dsp/codec_test -I/Users/kenji/src/github/dsp/codec_test -I/usr/local/include -I/Users/kenji/Qt/5.6/clang_64/lib/QtWidgets.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtGui.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtNetwork.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtCore.framework/Headers -F/Users/kenji/Qt/5.6/clang_64/lib SpeexOptionSetting.hxx -o moc_SpeexOptionSetting.cpp
+
+moc_CodecChooser.cpp: CodecWrapper.hxx \
+		Codec.hxx \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QWidget \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qwidget.h \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QLayout \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qlayout.h \
+		CodecChooser.hxx
+	/Users/kenji/Qt/5.6/clang_64/bin/moc $(DEFINES) -D__APPLE__ -D__GNUC__=4 -D__APPLE_CC__ -I/Users/kenji/Qt/5.6/clang_64/mkspecs/macx-clang -I/Users/kenji/src/github/dsp/codec_test -I/Users/kenji/src/github/dsp/codec_test -I/usr/local/include -I/Users/kenji/Qt/5.6/clang_64/lib/QtWidgets.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtGui.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtNetwork.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtCore.framework/Headers -F/Users/kenji/Qt/5.6/clang_64/lib CodecChooser.hxx -o moc_CodecChooser.cpp
 
 compiler_moc_source_make_all: Hello.moc
 compiler_moc_source_clean:
@@ -619,10 +646,12 @@ Hello.moc: Player.hxx \
 		../../../../Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers/QAudioOutput \
 		../../../../Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers/qaudiooutput.h \
 		AudioSource.hxx \
+		Codec.hxx \
 		SourceChooser.hxx \
 		SpeexOptionSetting.hxx \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QLayout \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qlayout.h \
+		CodecWrapper.hxx \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QApplication \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qapplication.h \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QGroupBox \
@@ -646,7 +675,7 @@ Hello.moc: Player.hxx \
 		../../../../Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers/QMediaPlayer \
 		../../../../Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers/qmediaplayer.h \
 		Hello.cpp
-	/Users/kenji/Qt/5.6/clang_64/bin/moc $(DEFINES) -D__APPLE__ -D__GNUC__=4 -D__APPLE_CC__ -I/Users/kenji/Qt/5.6/clang_64/mkspecs/macx-clang -I/Users/kenji/src/github/dsp/codec_test -I/Users/kenji/src/github/dsp/codec_test -I/Users/kenji/Qt/5.6/clang_64/lib/QtWidgets.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtGui.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtNetwork.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtCore.framework/Headers -F/Users/kenji/Qt/5.6/clang_64/lib Hello.cpp -o Hello.moc
+	/Users/kenji/Qt/5.6/clang_64/bin/moc $(DEFINES) -D__APPLE__ -D__GNUC__=4 -D__APPLE_CC__ -I/Users/kenji/Qt/5.6/clang_64/mkspecs/macx-clang -I/Users/kenji/src/github/dsp/codec_test -I/Users/kenji/src/github/dsp/codec_test -I/usr/local/include -I/Users/kenji/Qt/5.6/clang_64/lib/QtWidgets.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtGui.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtNetwork.framework/Headers -I/Users/kenji/Qt/5.6/clang_64/lib/QtCore.framework/Headers -F/Users/kenji/Qt/5.6/clang_64/lib Hello.cpp -o Hello.moc
 
 compiler_uic_make_all:
 compiler_uic_clean:
@@ -674,10 +703,12 @@ Hello.o: Hello.cpp Player.hxx \
 		../../../../Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers/QAudioOutput \
 		../../../../Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers/qaudiooutput.h \
 		AudioSource.hxx \
+		Codec.hxx \
 		SourceChooser.hxx \
 		SpeexOptionSetting.hxx \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QLayout \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qlayout.h \
+		CodecWrapper.hxx \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QApplication \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qapplication.h \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QGroupBox \
@@ -731,6 +762,7 @@ Player.o: Player.cpp Player.hxx \
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o Player.o Player.cpp
 
 AudioSource.o: AudioSource.cpp AudioSource.hxx \
+		Codec.hxx \
 		../../../../Qt/5.6/clang_64/lib/QtCore.framework/Headers/QIODevice \
 		../../../../Qt/5.6/clang_64/lib/QtCore.framework/Headers/qiodevice.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o AudioSource.o AudioSource.cpp
@@ -744,7 +776,14 @@ SourceChooser.o: SourceChooser.cpp SourceChooser.hxx \
 		../../../../Qt/5.6/clang_64/lib/QtCore.framework/Headers/qiodevice.h \
 		../../../../Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers/QAudioFormat \
 		../../../../Qt/5.6/clang_64/lib/QtMultimedia.framework/Headers/qaudioformat.h \
+		Codec.hxx \
 		AudioSource.hxx \
+		NullCodec.hxx \
+		SpeexCodec.hxx \
+		/usr/local/include/speex/speex.h \
+		/usr/local/include/speex/speex_bits.h \
+		/usr/local/include/speex/speex_types.h \
+		/usr/local/include/speex/speex_config_types.h \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QHBoxLayout \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QPushButton \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qpushbutton.h \
@@ -771,6 +810,45 @@ SpeexOptionSetting.o: SpeexOptionSetting.cpp SpeexOptionSetting.hxx \
 		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qslider.h
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o SpeexOptionSetting.o SpeexOptionSetting.cpp
 
+SpeexCodec.o: SpeexCodec.cpp SpeexCodec.hxx \
+		Codec.hxx \
+		/usr/local/include/speex/speex.h \
+		/usr/local/include/speex/speex_bits.h \
+		/usr/local/include/speex/speex_types.h \
+		/usr/local/include/speex/speex_config_types.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o SpeexCodec.o SpeexCodec.cpp
+
+NullCodec.o: NullCodec.cpp NullCodec.hxx \
+		Codec.hxx
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o NullCodec.o NullCodec.cpp
+
+CodecWrapper.o: CodecWrapper.cpp CodecWrapper.hxx \
+		Codec.hxx \
+		NullCodec.hxx \
+		SpeexCodec.hxx \
+		/usr/local/include/speex/speex.h \
+		/usr/local/include/speex/speex_bits.h \
+		/usr/local/include/speex/speex_types.h \
+		/usr/local/include/speex/speex_config_types.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o CodecWrapper.o CodecWrapper.cpp
+
+CodecChooser.o: CodecChooser.cpp CodecChooser.hxx \
+		CodecWrapper.hxx \
+		Codec.hxx \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QWidget \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qwidget.h \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QLayout \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qlayout.h \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QHBoxLayout \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qboxlayout.h \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QRadioButton \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qradiobutton.h \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QButtonGroup \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qbuttongroup.h \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/QLabel \
+		../../../../Qt/5.6/clang_64/lib/QtWidgets.framework/Headers/qlabel.h
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o CodecChooser.o CodecChooser.cpp
+
 moc_Player.o: moc_Player.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_Player.o moc_Player.cpp
 
@@ -779,6 +857,9 @@ moc_SourceChooser.o: moc_SourceChooser.cpp
 
 moc_SpeexOptionSetting.o: moc_SpeexOptionSetting.cpp 
 	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_SpeexOptionSetting.o moc_SpeexOptionSetting.cpp
+
+moc_CodecChooser.o: moc_CodecChooser.cpp 
+	$(CXX) -c $(CXXFLAGS) $(INCPATH) -o moc_CodecChooser.o moc_CodecChooser.cpp
 
 ####### Install
 
